<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.funtimer.palmtree.BaseProfileActivity">



    <!-- Search / will display always -->
    <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <!-- Location Found -->
    <item android:id="@+id/action_location_found"
        android:title="Testing"
        app:showAsAction="never" />

    <!-- Refresh -->
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <!-- Help -->
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never"/>

    <!-- Check updates -->
    <item android:id="@+id/action_check_updates"
        android:title="@string/action_check_updates"
        app:showAsAction="never" />
</menu>
