<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="10dp"
android:paddingRight="10dp"
android:paddingTop="10dp"
android:paddingBottom="10dp"
android:orientation="vertical"
android:text="@string/greetings" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/greetings" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/signinbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin" />

    <android.support.v7.widget.RecyclerView
    android:id="@+id/activities"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/greetings" />
</LinearLayout>
